--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,77 @@
+aiofiles==0.4.0
+aiohttp==3.5.4
+astroid==2.2.5
+async-timeout==3.0.1
+attrs==19.1.0
 beautifulsoup4==4.6.3
+blinker==1.4
 bs4==0.0.1
+cachetools==3.1.0
 certifi==2018.10.15
 chardet==3.0.4
+Click==7.0
+colorama==0.4.1
 cycler==0.10.0
 docopt==0.6.2
+Flask==1.0.3
 future==0.17.1
+google-api-python-client==1.7.8
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.3.0
+h11==0.9.0
+h2==3.1.0
+hpack==3.0.0
+httplib2==0.12.3
+Hypercorn==0.6.0
+hyperframe==5.2.0
 idna==2.7
 iso8601==0.1.12
+isort==4.3.20
+itsdangerous==1.1.0
+Jinja2==2.10.1
 kiwisolver==1.0.1
+lazy-object-proxy==1.4.1
 lxml==4.3.3
+MarkupSafe==1.1.1
 matplotlib==3.0.3
+mccabe==0.6.1
+multidict==4.5.2
 numpy==1.16.2
+oauthlib==3.0.1
 pandas==0.24.1
 pipenv==2018.10.13
 pipreqs==0.4.9
+pyasn1==0.4.5
+pyasn1-modules==0.2.5
+pycountry==18.12.8
+pylint==2.3.1
 pymavlink==2.3.4
 pyparsing==2.3.1
 pyserial==3.4
 python-dateutil==2.8.0
+pytoml==0.1.20
 pytz==2018.9
 PyYAML==5.1
+Quart==0.9.1
+redis==3.2.1
 requests==2.20.0
+requests-oauthlib==1.2.0
+rsa==4.0
 scipy==1.2.1
 seaborn==0.9.0
 serial==0.0.97
 six==1.12.0
+sortedcontainers==2.1.0
+tmdbsimple==2.2.0
+typed-ast==1.3.5
+typing-extensions==3.7.2
+uritemplate==3.0.0
 urllib3==1.24
 virtualenv==16.1.0
 virtualenv-clone==0.4.0
+Werkzeug==0.15.4
+wrapt==1.11.1
+wsproto==0.14.0
 yarg==0.1.9
+yarl==1.3.0
